frontend/test/should_pass/computations_while_rec.grg
function loopdown(var input:int) : int
{
	if(input > 1) {
		return(loopdown(input - 1));
	} else {
		return(1);
	}
}

function foo() : int
{
	def var res:int = 42;
	res = loopdown(res);
	return(res);
}

test t : (int)
{	
	independent {
	---
		yield {
			yield res = loopdown(res);
		}
	}
---
	def var res:int = 42;
	
	return (res);
}

rule r : (int)
{	
	modify {
	---
		def var res:int = 42;
		
		eval { 
			yield res = loopdown(res);
		}
		
		return (res);
	}
}
