frontend/test/should_fail/defYield_001.grg
test t
{
	def x:Node;
	pp:p(yield x);
	x --> y:Node;
}

pattern p(def x:Node)
{
	y:Node;
	yield { yield x = y; }
}

